<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/edit_text"
        android:gravity="center_horizontal"
        android:hint="@string/title_hint"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#E0E0E0"
        android:padding="16dp"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_gallery" />
    <!--
    <ImageView
        android:id="@+id/obraImageView"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="24dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:background="#D0D0D0"/>
    -->

    <EditText
        android:id="@+id/textEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/description_hint" />

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEditText"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/author_hint" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorEditText"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/year_hint" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/cancel" />


    <ImageButton
        android:id="@+id/checkButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/check" />

    <Button
        android:id="@+id/selectVideoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearEditText"
        android:layout_marginTop="8dp"
        android:text="Selecionar Vídeo" />

    <Button
        android:id="@+id/selectAudioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectVideoButton"
        android:layout_marginTop="5dp"
        android:text="Selecionar Áudio" />

</RelativeLayout>
