<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0">

    <TextView
        android:id="@+id/NameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="160dp"
        android:gravity="center"
        android:text="@string/search"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchLabel"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:padding="12dp" />

    <ImageButton
        android:id="@+id/checkButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="25dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/check" />

    <TextView
        android:id="@+id/scanLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchEditText"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/session"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/scanLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#C0C0C0"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_camera" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/trashButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/play" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/librasButton"
        android:layout_toEndOf="@+id/trashButton"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/settings" />

    <ImageButton
        android:id="@+id/librasButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/libras" />

</RelativeLayout>
