<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C27B0">

    <ImageButton
        android:id="@+id/voltarButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/volta" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_hint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/obraImageView"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="#D0D0D0"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obraImageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/description_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/descriptionLabel"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/descriptionLabel" />

    <TextView
        android:id="@+id/authorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/author_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/authorLabel"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/authorLabel" />

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/year_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/yearLabel"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/yearLabel" />

    <ImageButton
        android:id="@+id/audioButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/play" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/editing" />

    <ImageButton
        android:id="@+id/librasButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/libras" />
</RelativeLayout>
